# product-experimentation

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTEXT.md  Makefile  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  (+2 more)
.streamlit/: config.toml
dashboard/: app.py  charts.py  data.py  glossary.py  theme.py  valuecolor.py
docs/: DATA_DICTIONARY.md  DEPLOY.md  EXPERIMENT_DESIGN.md  FUTURE_ENHANCEMENTS.md  METRICS.md  PHASE_LOG.md  SKILL_ROUTING.md  STATUS.md  did-event-catalog.md
notebooks/: 00_eda_gate.ipynb
reports/: did_feasibility.json  did_feasibility.md  eda_gate.md  experiment_001.json  experiment_001.md  experiment_001_readout.md  experiment_grid.json  experiment_scenarios.json  experiment_scenarios.md  installment_motivation.json  installment_motivation.md  sample_results.json
scripts/: build_experiment_grid.py  build_sample.py  dashboard_smoke.py
src/: _sql.py  constants.py  exceptions.py
tests/: conftest.py  did_factory.py  test_analysis.py  test_assignment.py  test_balance.py  test_build_experiment_grid.py  test_build_sample.py  test_conftest_sanity.py  test_constants.py  test_cuped.py  test_did_catalog.py  test_did_estimator.py  test_did_factory.py  test_did_gate.py  test_did_panel.py  test_did_pretrends.py  test_did_report.py  test_did_run.py  test_effect.py  test_installment_motivation.py  test_loader.py  test_metrics.py  test_power.py  test_readout_integrity.py  test_report.py  test_results_io.py  test_run_experiment.py  test_scenarios.py
(+100 files in other folders)
