[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "product-experimentation-analytics"
version = "0.1.0"
description = "End-to-end product experimentation analytics with simulated A/B testing on Olist e-commerce data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "duckdb>=1.0.0",
    "scipy>=1.12.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=26.0.0",
    "isort>=8.0.0",
    "mypy>=2.0.0",
    "ruff>=0.15.0",
    "hypothesis>=6.100",
]
dashboard = [
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
]

[tool.setuptools.packages.find]
include = ["src*", "dashboard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["notebooks/", "app/", "tests/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["pandas.*", "duckdb.*", "scipy.*", "matplotlib.*", "numpy.*", "statsmodels.*", "plotly.*"]
ignore_missing_imports = true

[tool.coverage.run]
omit = ["dashboard/sections/*", "dashboard/app.py"]
